テスト用のコントラクトを追加

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -12,7 +12,8 @@
         "build": "npx truffle build",
         "deploy:fuji": "npx truffle migrate --network fuji",
         "deploy:fuji:DNS": "npx truffle migrate --f 2 --to 2 --network fuji",
-        "verify:fuji": "npx truffle run verify MyToken --network fuji"
+        "verify:fuji": "npx truffle run verify MyToken --network fuji",
+        "verify:fuji:DNS": "npx truffle run verify DNS --network fuji"
     },
     "keywords": [],
     "author": "mashharuki",
