--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "contract:test": "yarn workspace backend test",
     "contract:deploy:fuji": "yarn workspace backend deploy:fuji",
     "contract:deploy:fuji:DNS": "yarn workspace backend deploy:fuji:DNS",
-    "contract:verify:fuji": "yarn workspace backend verify:fuji"
+    "contract:verify:fuji": "yarn workspace backend verify:fuji",
+    "contract:verify:fuji:DNS": "yarn workspace backend verify:fuji:DNS"
   }
 }
